--- a/guide/Introduction.tex
+++ b/guide/Introduction.tex
@@ -8,8 +8,7 @@ What this guide is about, how to use this guide.
 		inkscapelatex=false,
 		width = 32pt
 	]{2d.svg}
-	\caption{2D symbol}
-	\label{fig:2d_icon}
+	\caption{2D symbol}\label{fig:2d_icon}
 \end{figure}
 \noindent
 The element in Figure \ref{fig:2d_icon} signifies that a tool can be used in 2D views.\newline
@@ -20,8 +19,7 @@ The element in Figure \ref{fig:2d_icon} signifies that a tool can be used in 2D 
 		inkscapelatex=false,
 		width = 32pt
 	]{3d.svg}
-	\caption{3D symbol}
-	\label{fig:3d_icon}
+	\caption{3D symbol}\label{fig:3d_icon}
 \end{figure}
 \noindent
 The element in Figure \ref{fig:3d_icon} signifies that a tool can be used in 3D views.\newline
@@ -32,8 +30,7 @@ The element in Figure \ref{fig:3d_icon} signifies that a tool can be used in 3D 
 		inkscapelatex=false,
 		width = 55pt
 	]{hint.svg}
-	\caption{Hint symbol}
-	\label{fig:hint_icon}
+	\caption{Hint symbol}\label{fig:hint_icon}
 \end{figure}
 \noindent
 The element in Figure \ref{fig:hint_icon} signifies a tip or hint.\newline
@@ -44,8 +41,7 @@ The element in Figure \ref{fig:hint_icon} signifies a tip or hint.\newline
 		inkscapelatex=false,
 		width = 55pt
 	]{irreversible.svg}
-	\caption{Irreversible symbol}
-	\label{fig:noundo_icon}
+	\caption{Irreversible symbol}\label{fig:noundo_icon}
 \end{figure}
 \noindent
 The element in Figure \ref{fig:noundo_icon} signifies to be cautious because a operation may not be undone.\pagebreak
@@ -56,8 +52,7 @@ The element in Figure \ref{fig:noundo_icon} signifies to be cautious because a o
 		inkscapelatex=false,
 		width = 55pt
 	]{performance.svg}
-	\caption{Performance symbol}
-	\label{fig:performance_icon}
+	\caption{Performance symbol}\label{fig:performance_icon}
 \end{figure}
 \noindent
 The element in Figure \ref{fig:performance_icon} signifies that a operation may use a lot of resources.\newline
@@ -68,8 +63,7 @@ The element in Figure \ref{fig:performance_icon} signifies that a operation may 
 		inkscapelatex=false,
 		width = 55pt
 	]{plugin.svg}
-	\caption{Plugin symbol}
-	\label{fig:plugin_icon}
+	\caption{Plugin symbol}\label{fig:plugin_icon}
 \end{figure}
 \noindent
 The element in Figure \ref{fig:plugin_icon} signifies that a tool may only be available after installing a third party plugin.\newline
@@ -145,8 +139,7 @@ Upon first launch you will be greeted by the 3D Slicers welcome screen (see: Fig
 			% scale=0.2
 			width=0.95\paperwidth
 		]{slicerWelcome.png}}
-	\caption{3D Slicer welcome screen}
-	\label{fig:slicerWelcome}
+	\caption{3D Slicer welcome screen}\label{fig:slicerWelcome}
 \end{figure}
 
 The welcome screen has some quick links to useful modules like load data and download datasets. (TODO)
@@ -157,8 +150,7 @@ The welcome screen has some quick links to useful modules like load data and dow
 			% scale=0.2
 			width=0.95\paperwidth
 		]{slicerWelcomeMarked1.png}}
-	\caption{3D Slicer window}
-	\label{fig:slicerView}
+	\caption{3D Slicer window}\label{fig:slicerView}
 \end{figure}
 
 \noindent
@@ -175,7 +167,7 @@ A quick overview of these areas is provided by Figure \ref{fig:slicerView}:
 
 \pagebreak
 
-\subsubsection{The view area} \label{sec:view_area}
+\subsubsection{The view area}\label{sec:view_area}
 By default 3D Slicer shows the view area (see Figure \ref{fig:4upview}) with three 2D slice views and the interactive 3D view at the top right.\\
 \noindent
 \begin{figure}[h!] % h - here
@@ -184,8 +176,7 @@ By default 3D Slicer shows the view area (see Figure \ref{fig:4upview}) with thr
 			% scale=0.2
 			width=0.95\paperwidth
 		]{view.png}}
-	\caption{3D Slicer view area}
-	\label{fig:4upview}
+	\caption{3D Slicer view area}\label{fig:4upview}
 \end{figure}
 
 \noindent
@@ -226,8 +217,7 @@ Clicking on the \texttt{double arrow} button (see Figure \ref{fig:pinMenu}:5) wi
 			% scale=0.2
 			width=0.95\paperwidth
 		]{pinMenu.png}}
-	\caption{3D Slicer pin menu}
-	\label{fig:pinMenu}
+	\caption{3D Slicer pin menu}\label{fig:pinMenu}
 \end{figure}
 \pagebreak
 
@@ -241,8 +231,7 @@ Figure \ref{fig:slicerView}:2 the module panel displays options, tools and infor
 			% scale=0.2
 			width=0.95\paperwidth
 		]{toolbar.png}}
-	\caption{3D Slicer toolbar}
-	\label{fig:toolbar}
+	\caption{3D Slicer toolbar}\label{fig:toolbar}
 \end{figure}
 
 \noindent
@@ -289,8 +278,7 @@ See Figure \ref{fig:slicerView}:4. %TODO
 			% scale=0.2
 			width=0.95\paperwidth
 		]{dataprobe.png}}
-	\caption{3D Slicer Dataprobe}
-	\label{fig:dataprobe}
+	\caption{3D Slicer Dataprobe}\label{fig:dataprobe}
 \end{figure}
 
 \noindent
