--- a/guide/glossary.tex
+++ b/guide/glossary.tex
@@ -24,7 +24,7 @@
 \newglossaryentry{openvr}
 {
 name=OpenVR,
-description={''[...] an API and runtime that allows access to virtual reality hardware from multiple vendors without requiring that applications have specific knowledge of the hardware they are targeting''\cite{valvesoftwareOpenVRSDK2024}}
+description={''[\ldots] an API and runtime that allows access to virtual reality hardware from multiple vendors without requiring that applications have specific knowledge of the hardware they are targeting''\cite{valvesoftwareOpenVRSDK2024}}
 }
 \newglossaryentry{roi}
 {
@@ -44,5 +44,5 @@ description={''[...] an API and runtime that allows access to virtual reality ha
 \newglossaryentry{mrb}
 {
 	name=MRB,
-	description={Medical Reality Bundle) (.mrb, .zip): MRB is a binary format encapsulating all scene data (bulk data and metadata). Internally it uses zip format. \cite{kikinis3DSlicerPlatform2014}}
+	description={Medical Reality Bundle (.mrb,\ .zip): MRB is a binary format encapsulating all scene data (bulk data and metadata). Internally it uses zip format. \cite{kikinis3DSlicerPlatform2014}}
 }
